# lofy

./: .eslintrc  .gitattributes  .gitignore  .stylelintrc.json  Cargo.toml  README.md  cors.py  dl.sh  go.mod  go.sum  index.html  live.sh  lofy.json  main.go  main.js  package.json  pnpm-lock.yaml  vite.config.ts
.tests/2/: track.m4a
client/: App.tsx  Current.tsx  List.tsx  Tracks.tsx  config.ts  controls.ts  fetch.ts  global.ts  index.tsx  types.ts  util.ts  worker.ts
client/components/: App.tsx  Cover.tsx  Current.tsx  List.tsx  Loading.tsx  MsgBox.tsx  Player.tsx  ProgressBar.tsx  Pulse.tsx  Search.tsx  Tracks.tsx  Volume.tsx
client/scss/: App.module.scss  Cover.module.scss  List.module.scss  Loading.module.scss  MsgBox.module.scss  Player.module.scss  ProgressBar.module.scss  Pulse.module.scss  Search.module.scss  Tracks.module.scss  _cover.scss  _funcs.scss  _nav.scss  _sidebar.scss  _tracks.scss  _vars.scss  index.scss
client/src/: App.tsx
client/ts/: config.ts  controls.ts  fetch.ts  global.ts  types.ts  util.ts  worker.ts
public/assets/: nerd-fonts.min.css
scripts/: build.sh  cors.py  dl.sh  genfont.sh  lint.sh  live.sh
server/: config.go  endpoints.go  endpoints_test.go  hooks.go  hooks_test.go  types.go  util.go  util_test.go
src/: Current.tsx  app.rs  config.rs  config.ts  index.tsx  lib.rs  macros.rs  main.rs  util.rs
src/scss/: App.scss
static/: index.html
