[package]
edition = "2021"
name = "lofy"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.81"

# Bindings for translation of Promises and async
wasm-bindgen-futures = "0.4.31"

# WASM bindings for global JS APIs, meant to work
# for browsers as well as Node etc.
js-sys = "^0.3.58"

reqwest = "0.11.11"

[dependencies.web-sys]
# WASM bindings for browser specific constructs
# like `Event` and `Html` elements.
# The features we need haft to be explicitly enabled
version = "^0.3"
features = [
    "console",
    "Request",
    "RequestMode",
    "RequestInit",
    "Response"
]
